починил докер, добавил статистику соощнеий по рассылке
