# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8000",
+    "host": "127.0.0.1:8000",
     "basePath": "/v1",
     "paths": {
         "/client": {
@@ -33,12 +33,12 @@
                 "summary": "Update",
                 "parameters": [
                     {
-                        "description": "username",
+                        "description": "body",
                         "name": "username",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.updateClientRequest"
+                            "$ref": "#/definitions/internal_transport_http_v1.updateClientRequest"
                         }
                     }
                 ],
@@ -46,25 +46,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     }
                 }
@@ -83,12 +83,12 @@
                 "summary": "Delete",
                 "parameters": [
                     {
-                        "description": "username",
+                        "description": "body",
                         "name": "username",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.deleteClientRequest"
+                            "$ref": "#/definitions/internal_transport_http_v1.deleteClientRequest"
                         }
                     }
                 ],
@@ -96,25 +96,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     }
                 }
@@ -140,7 +140,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.addClientRequest"
+                            "$ref": "#/definitions/internal_transport_http_v1.addClientRequest"
                         }
                     }
                 ],
@@ -148,25 +148,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                            "$ref": "#/definitions/internal_transport_http_v1.response"
                         }
                     }
                 }
@@ -187,7 +187,7 @@
                 "summary": "Delete",
                 "parameters": [
                     {
-                        "description": "username",
+                        "description": "body",
                         "name": "username",
                         "in": "body",
                         "required": true,
@@ -237,7 +237,7 @@
                 "summary": "Update",
                 "parameters": [
                     {
-                        "description": "username",
+                        "description": "body",
                         "name": "username",
                         "in": "body",
                         "required": true,
@@ -276,7 +276,7 @@
         },
         "/newsletter/create": {
             "post": {
-                "description": "Создает рассылку",
+                "description": "Создает рассылку.Если убрать фильтр, то добавит в рассылку всех клиентов",
                 "consumes": [
                     "application/json"
                 ],
@@ -289,7 +289,7 @@
                 "summary": "Create",
                 "parameters": [
                     {
-                        "description": "username",
+                        "description": "body",
                         "name": "username",
                         "in": "body",
                         "required": true,
@@ -303,6 +303,62 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/fr_internal_transport_http_v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/newsletter/{id}/messages": {
+            "get": {
+                "description": "Выводит последние статусы сообщения по id рассылки",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Newsletter"
+                ],
+                "summary": "GetLastMessageStatuses",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Newsletter ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/fr_internal_transport_http_v1.getLastMessageStatusesResponse"
                         }
                     },
                     "400": {
@@ -400,6 +456,9 @@
                     "example": 1
                 }
             }
+        },
+        "fr_internal_transport_http_v1.getLastMessageStatusesResponse": {
+            "type": "object"
         },
         "fr_internal_transport_http_v1.response": {
             "type": "object",
@@ -534,6 +593,9 @@
                     "example": 1
                 }
             }
+        },
+        "internal_transport_http_v1.getLastMessageStatusesResponse": {
+            "type": "object"
         },
         "internal_transport_http_v1.response": {
             "type": "object",
