# internal/transport/http/v1/newsletter.go
@@ -3,13 +3,14 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 )
 
 // @Summary     Create
 // @Description Создает рассылку.Если убрать фильтр, то добавит в рассылку всех клиентов
 // @Tags        Newsletter
 // @Accept      json
-// @Param       username body createNewsletterRequest true "username"
+// @Param       username body createNewsletterRequest true "body"
 // @Produce     json
 // @Success     201 {object} response
 // @Failure     400 {object} response
@@ -39,7 +40,7 @@ func (t transport) createNewsletter(ctx *gin.Context) {
 // @Description Удаляет рассылку
 // @Tags        Newsletter
 // @Accept      json
-// @Param       username body deleteNewsletterRequest true "username"
+// @Param       username body deleteNewsletterRequest true "body"
 // @Produce     json
 // @Success     200 {object} response
 // @Failure     400 {object} response
@@ -70,7 +71,7 @@ func (t transport) deleteNewsletter(ctx *gin.Context) {
 // @Description Изменяет рассылку
 // @Tags        Newsletter
 // @Accept      json
-// @Param       username body updateNewsletterRequest true "username"
+// @Param       username body updateNewsletterRequest true "body"
 // @Produce     json
 // @Success     200 {object} response
 // @Failure     400 {object} response
@@ -98,5 +99,38 @@ func (t transport) updateNewsletter(ctx *gin.Context) {
 
 	}
 	ctx.JSON(http.StatusCreated, &response{Status: "ok"})
+
+}
+
+// @Summary     GetLastMessageStatuses
+// @Description Выводит последние статусы сообщения по id рассылки
+// @Tags        Newsletter
+// @Accept      json
+// @Param       id   path      int  true  "Newsletter ID"
+// @Param status query string false "status"
+// @Produce     json
+// @Success     200 {object} getLastMessageStatusesResponse
+// @Failure     400 {object} response
+// @Failure     404 {object} response
+// @Failure     500 {object} response
+// @Router      /newsletter/{id}/messages [get]
+func (t transport) getLastMessageStatuses(ctx *gin.Context) {
+	idStr := ctx.Param("id")
+	status := ctx.Query("status")
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		t.logger.Error(err, "http-v1-getLastMessageStatuses")
+		errorResponse(ctx, http.StatusBadRequest, ValidationError)
+		return
+
+	}
+	msgs, err := t.service.GetLastStatusesByNewsletterId(ctx.Request.Context(), id, status)
+	if err != nil {
+		t.logger.Error(err, "http-v1-getLastMessageStatuses")
+		errorResponse(ctx, http.StatusInternalServerError, ServerError)
+		return
+
+	}
+	ctx.JSON(http.StatusOK, &getLastMessageStatusesResponse{msgs})
 
 }
